[package]
name = "cellrs"
version = "0.2.2"
authors = ["leglesslamb <wu.rupert@outlook.com>"]
edition = "2018"
description = "A terminal-based battery indicator written in Rust."
repository = "https://gitlab.com/leglesslamb/cellrs"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["battery", "terminal"]
license = "MIT"

[dependencies]
battery = "0.7.5"
chrono = "0.4"
termion = "1.5.3"
